--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   torrent-indexer:
-    image: felipemarinho97/torrent-indexer:latest
+    image: torrent-indexer:latest
     build: .
     container_name: torrent-indexer
     restart: unless-stopped
